Moved the application to cloud...it's running!
